add cypress-testing-library and start-server-and-test script

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "../node_modules",
-    "types": ["cypress"]
+    "types": ["cypress", "cypress-testing-library"]
   },
   "include": ["**/*.*"]
 }
