--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "scripts": {
     "start": "react-scripts-ts start",
+    "start-no-browser": "cross-env BROWSER=none react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "cy:open": "cypress open",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "dev": "start-server-and-test start-no-browser http://localhost:3000 cy:open"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^4.0.2",
@@ -23,7 +25,10 @@
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
+    "cross-env": "^5.2.0",
     "cypress": "^3.1.2",
+    "cypress-testing-library": "^2.3.3",
+    "start-server-and-test": "^1.7.10",
     "typescript": "^3.1.6"
   }
 }
