--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "styled-components": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -25,6 +26,7 @@
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
     "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^4.1.0",
     "cross-env": "^5.2.0",
     "cypress": "^3.1.2",
     "cypress-testing-library": "^2.3.3",
