add redux & sagas & reselect

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^0.16.2",
+    "reselect": "^4.0.0",
     "styled-components": "^4.1.1"
   },
   "scripts": {
@@ -25,7 +29,11 @@
     "@types/node": "^10.12.9",
     "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.10",
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
+    "@types/reselect": "^2.2.0",
     "@types/styled-components": "^4.1.0",
     "cross-env": "^5.2.0",
     "cypress": "^3.1.2",
