--- a/package.json
+++ b/package.json
@@ -1,46 +1,58 @@
 {
-  "name": "civ",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^3.5.1",
-    "@material-ui/lab": "^3.0.0-alpha.23",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "3.1.0",
-    "redux": "^4.0.1",
-    "redux-saga": "^0.16.2",
-    "reselect": "^4.0.0",
-    "styled-components": "^4.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts-ts start",
-    "start-no-browser": "cross-env BROWSER=none react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "dev": "start-server-and-test start-no-browser http://localhost:3000 cy:open"
-  },
-  "devDependencies": {
-    "@cypress/webpack-preprocessor": "^4.0.2",
-    "@types/jest": "^23.3.9",
-    "@types/node": "^10.12.9",
-    "@types/react": "^16.7.6",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-redux": "^6.0.10",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/redux": "^3.6.0",
-    "@types/redux-saga": "^0.10.5",
-    "@types/reselect": "^2.2.0",
-    "@types/styled-components": "^4.1.0",
-    "cross-env": "^5.2.0",
-    "cypress": "^3.1.2",
-    "cypress-testing-library": "^2.3.3",
-    "start-server-and-test": "^1.7.10",
-    "typescript": "^3.1.6"
-  }
+    "name": "civ",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@material-ui/core": "^3.5.1",
+        "@material-ui/lab": "^3.0.0-alpha.23",
+        "react": "^16.6.3",
+        "react-dom": "^16.6.3",
+        "react-redux": "^5.1.1",
+        "react-router-dom": "^4.3.1",
+        "react-scripts-ts": "3.1.0",
+        "redux": "^4.0.1",
+        "redux-saga": "^0.16.2",
+        "reselect": "^4.0.0",
+        "styled-components": "^4.1.1"
+    },
+    "scripts": {
+        "start": "react-scripts-ts start",
+        "start-no-browser": "cross-env BROWSER=none react-scripts-ts start",
+        "build": "react-scripts-ts build",
+        "test": "react-scripts-ts test --env=jsdom",
+        "eject": "react-scripts-ts eject",
+        "cy:open": "cypress open",
+        "cy:run": "cypress run",
+        "dev": "start-server-and-test start-no-browser http://localhost:3000 cy:open",
+        "lint": "tslint --project .",
+        "tscheck": "tsc --p ./tsconfig.json --noEmit",
+        "format": "prettier --write \"**/*.+(js|ts|tsx|json|)\"",
+        "validate": "yarn lint && yarn tscheck"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged && yarn tscheck"
+        }
+    },
+    "devDependencies": {
+        "@cypress/webpack-preprocessor": "^4.0.2",
+        "@types/jest": "^23.3.9",
+        "@types/node": "^10.12.9",
+        "@types/react": "^16.7.6",
+        "@types/react-dom": "^16.0.9",
+        "@types/react-redux": "^6.0.10",
+        "@types/react-router-dom": "^4.3.1",
+        "@types/redux": "^3.6.0",
+        "@types/redux-saga": "^0.10.5",
+        "@types/reselect": "^2.2.0",
+        "@types/styled-components": "^4.1.0",
+        "cross-env": "^5.2.0",
+        "cypress": "^3.1.2",
+        "cypress-testing-library": "^2.3.3",
+        "husky": "^1.2.0",
+        "lint-staged": "^8.1.0",
+        "prettier": "^1.15.2",
+        "start-server-and-test": "^1.7.10",
+        "typescript": "^3.1.6"
+    }
 }
