--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,11 @@
         "module": "esnext",
         "target": "es5",
         "lib": ["es6", "dom"],
+        "plugins": [
+            {
+                "name": "typescript-styled-plugin"
+            }
+        ],
         "sourceMap": true,
         "allowJs": true,
         "jsx": "react",
