--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "lint-staged": "^8.1.0",
         "prettier": "^1.15.2",
         "start-server-and-test": "^1.7.10",
-        "typescript": "^3.1.6"
+        "typescript": "^3.1.6",
+        "typescript-styled-plugin": "^0.13.0"
     }
 }
