--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "react-router-dom": "^4.3.1",
         "react-scripts-ts": "3.1.0",
         "redux": "^4.0.1",
+        "redux-logger": "^3.0.6",
         "redux-saga": "^0.16.2",
         "reselect": "^4.0.0",
         "styled-components": "^4.1.1"
@@ -43,6 +44,7 @@
         "@types/react-redux": "^6.0.10",
         "@types/react-router-dom": "^4.3.1",
         "@types/redux": "^3.6.0",
+        "@types/redux-logger": "^3.0.6",
         "@types/redux-saga": "^0.10.5",
         "@types/reselect": "^2.2.0",
         "@types/styled-components": "^4.1.0",
