--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
         "react-dom": "^16.6.3",
         "react-redux": "^6.0.0",
         "react-router-dom": "^4.3.1",
-        "react-scripts-ts": "3.1.0",
+        "react-scripts": "^2.1.1",
         "redux": "^4.0.1",
         "redux-logger": "^3.0.6",
         "redux-saga": "^0.16.2",
         "reselect": "^4.0.0",
-        "styled-components": "^4.1.1"
+        "styled-components": "^4.1.3"
     },
     "scripts": {
-        "start": "react-scripts-ts start",
-        "start-no-browser": "cross-env BROWSER=none react-scripts-ts start",
-        "build": "react-scripts-ts build",
-        "test": "react-scripts-ts test --env=jsdom",
-        "eject": "react-scripts-ts eject",
+        "start": "react-scripts start",
+        "start-no-browser": "cross-env BROWSER=none react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
         "cy:open": "cypress open",
         "cy:run": "cypress run",
         "dev": "start-server-and-test start-no-browser http://localhost:3000 cy:open",
@@ -39,12 +39,12 @@
     },
     "devDependencies": {
         "@cypress/webpack-preprocessor": "^4.0.2",
-        "@types/jest": "^23.3.9",
+        "@types/jest": "^23.3.10",
         "@types/lodash.uniqueid": "^4.0.4",
         "@types/node": "^10.12.15",
         "@types/ramda": "types/npm-ramda#dist",
         "@types/react": "^16.7.17",
-        "@types/react-dom": "^16.0.9",
+        "@types/react-dom": "^16.0.11",
         "@types/react-redux": "^6.0.11",
         "@types/react-router-dom": "^4.3.1",
         "@types/redux": "^3.6.0",
@@ -59,7 +59,13 @@
         "lint-staged": "^8.1.0",
         "prettier": "^1.15.2",
         "start-server-and-test": "^1.7.10",
+        "tslint": "^5.11.0",
+        "tslint-config-prettier": "^1.17.0",
+        "tslint-react": "^3.6.0",
         "typescript": "^3.2.2",
         "typescript-styled-plugin": "^0.13.0"
-    }
+    },
+    "browserslist": [
+        "last 2 Chrome versions"
+    ]
 }
