--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,29 @@
 {
     "compilerOptions": {
-        "baseUrl": ".",
-        "outDir": "build/dist",
+        "target": "es6",
+        "allowJs": false,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": false,
+        "forceConsistentCasingInFileNames": true,
         "module": "esnext",
-        "target": "es5",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "noUnusedLocals": true,
+        "noEmit": true,
+        "jsx": "preserve",
         "lib": ["es7", "dom", "es2017.object"],
         "plugins": [
             {
                 "name": "typescript-styled-plugin"
             }
-        ],
-        "sourceMap": true,
-        "allowJs": true,
-        "jsx": "react",
-        "moduleResolution": "node",
-        "rootDir": "src",
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noImplicitAny": true,
-        "importHelpers": true,
-        "strictNullChecks": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "noUnusedLocals": true,
-        "skipLibCheck": true,
-        "downlevelIteration": true
+        ]
     },
-    "exclude": ["node_modules", "build", "scripts", "acceptance-tests", "webpack", "jest", "src/setupTests.ts", "cypress"]
+    "include": ["src"]
 }
