--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@material-ui/core": "^3.6.2",
         "@material-ui/lab": "^3.0.0-alpha.25",
         "lodash.uniqueid": "^4.0.1",
+        "normalize.css": "^8.0.1",
         "ramda": "^0.26.1",
         "react": "^16.6.3",
         "react-dom": "^16.6.3",
