--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "start-server-and-test": "^1.7.10",
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.17.0",
+        "tslint-no-circular-imports": "^0.6.1",
         "tslint-react": "^3.6.0",
         "typescript": "^3.2.2",
         "typescript-styled-plugin": "^0.13.0"
